--- a/public/assets/scss/screen.scss
+++ b/public/assets/scss/screen.scss
@@ -3,8 +3,8 @@
 // MAIN IMPORTS
 
 @import "utilities/bootstrap";
-@import "../../../bower_components/fontawesome/scss/font-awesome";
-@import "../../../bower_components/bourbon/app/assets/stylesheets/bourbon";
+//ADD FONT AWESOME
+@import "../../../node_modules/bourbon/app/assets/stylesheets/bourbon";
 @import "utilities/mixins";
 @import "utilities/grid";
 @import "utilities/sprites";
