--- a/public/templates/01/assets/scss/components/_banners.scss
+++ b/public/templates/01/assets/scss/components/_banners.scss
@@ -13,22 +13,21 @@
 					top: 0%; left: 50%;
 					margin-left: -1200px;
 					width: auto;
-					@extend .hidden-xs;@extend .hidden-hs;
 				}
 				.container{
 					position:relative;
 					.slide-content{
-						@extend .col-lg-16;@extend .col-md-16;@extend .col-sm-12;@extend .col-xs-24;@extend .col-hs-24;				
-						color: #fff;
 						padding-top: 36px;
 						padding-bottom: 56px;
-						@media #{$xs-down} {
-							color: #000;
-							text-align:center;
+						color: #000;
+						text-align:center;
+						@media #{$sm-up} {
+							color: #fff;
+							text-align:left;
 						}
 
 						.title {
-							@extend .heading-font; font-size: 42px; line-height: 40px;
+							font-size: 42px; line-height: 40px;
 							max-width: 650px;
 							margin: 0 0 24px;
 						}
@@ -36,19 +35,13 @@
 						.text {
 							font-size: 20px; line-height: 24px;
 							max-width: 420px;
-							margin: 0 0 30px;
-							@media #{$xs-down} {
-								margin: 30px auto 30px;
+							margin: 30px auto 30px;
+							@media #{$sm-up} {
+								margin: 0 0 30px;
 							}
-						}
-
-						.cta{
-							@extend .btn;
 						}
 					}
 					.box{
-						@extend .col-lg-8;@extend .col-md-8;@extend .col-sm-12;
-						@extend .hidden-xs;@extend .hidden-hs;
 						padding-top: 36px;
 						padding-bottom: 56px;
 						p {
