--- a/public/templates/01/assets/scss/components/_fonts.scss
+++ b/public/templates/01/assets/scss/components/_fonts.scss
@@ -18,10 +18,6 @@
 .medium-font { font-family: $font-family-sans-serif; font-weight: 500; }
 .bold-font { font-family: $font-family-sans-serif; font-weight: 700; }
 
-.heading-font { @extend .regular-font; }
-.heading-font-2 { @extend .medium-font; }
-.heading-font-3 { @extend .bold-font; }
-
 // ------------------------------------------------------------------------------------------------------
 // FONT STYLES
 
@@ -37,8 +33,8 @@ h6 {
 	margin: 0 0 ($grid-gutter-width / 2);
 }
 
-h1 { @extend .heading-font; font-size: 32px; line-height: 33px; margin: 0 0 20px; }
-h2 { @extend .heading-font; font-size: 21px; line-height: 28px; margin: 0 0 18px; }
-h3 { @extend .heading-font; font-size: 19px; line-height: 26px; margin: 0 0 18px; }
-h4 { @extend .heading-font-2; font-size: 17px; line-height: 24px; margin: 0 0 16px; }
-h5 { @extend .heading-font-2; font-size: 15px; line-height: 22px; margin: 0 0 14px; }
+h1 {  line-height: 33px; margin: 0 0 20px; }
+h2 {  line-height: 28px; margin: 0 0 18px; }
+h3 {  line-height: 26px; margin: 0 0 18px; }
+h4 { font-family: $font-family-sans-serif; font-weight: 500; margin: 0 0 16px; }
+h5 { font-family: $font-family-sans-serif; font-weight: 500; margin: 0 0 14px; }
