--- a/public/templates/01/assets/scss/components/_footer.scss
+++ b/public/templates/01/assets/scss/components/_footer.scss
@@ -10,39 +10,32 @@
 	a {
 		color: #fff;
 	}
-	
-	.copy{
-		@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-8;@extend .col-xs-24;@extend .col-hs-24;
-		@extend .no-padding-side;
-		@extend .light-font;
-	}
 
 	.nav {
-		@extend .col-lg-18;@extend .col-md-18;@extend .col-sm-16;@extend .col-xs-24;@extend .col-hs-24;
-		@extend .no-padding-side;
 		float:right;
 		overflow: hidden;
-		text-align: right;
-		@media #{$xs-down} {
-			text-align: left;
+
+		text-align: left;
+		@media #{$sm-up} {
+			text-align: right;
 		}
 		ul{
-			@extend .list-unstyled;
 			li {
-				margin: 0 0 0 20px;
-				display: inline-block;
-				@media #{$xs-down} {
-					display: block;
-					margin:0;
-					border-bottom: 1px solid rgb(68, 68, 68);
+				display: block;
+				margin:0;
+				border-bottom: 1px solid rgb(68, 68, 68);
+				@media #{$sm-up} {
+					margin: 0 0 0 20px;
+					display: inline-block;
+					border-bottom: none;
 				}
 			}
 
 			a {
 				display: block;
-				@extend .light-font;
-				@media #{$xs-down} {
-					padding: 12px 20px  12px 0;
+				padding: 12px 20px  12px 0;
+				@media #{$sm-up} {
+					padding: 0;
 				}
 				&:hover{
 					text-decoration: underline;
