--- a/public/templates/01/assets/scss/components/_global.scss
+++ b/public/templates/01/assets/scss/components/_global.scss
@@ -7,8 +7,7 @@ body {
     padding: 0;
 }
 
-a{ 
-	color:#000;
+a{
 	text-decoration:none;
 	img{
 		border:none;
@@ -16,11 +15,6 @@ a{
 	&:hover{
 		text-decoration: none;
 	}
-}
-
-
-*{
-	line-height:24px;
 }
 
 .no-pad{
@@ -83,34 +77,7 @@ a{
 
 //--------------
 //Item list
-
-.block-heading {
-	@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-	position: relative;
-	background: #333;
-	color: #fff;
-	padding: 10px 0 12px;
-	margin-bottom: 25px;
-	.heading {
-		@extend .heading-font-2; font-size: 20px; line-height: 24px;
-		margin: 0;
-		padding: 0 80px;
-		text-align: center;
-	}
-
-	a{
-		position: absolute; top: 12px; right: 14px;
-		font-size: 15px; line-height: 24px;
-		color: #fff;
-		&:hover {
-			text-decoration: underline;
-		}
-	}
-}
-
 .item-list{
-	@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-	@extend .clearfix;
 	.item{
 		figure{
 			position:relative;
@@ -148,14 +115,14 @@ a{
 					@include transition(background-color .15s cubic-bezier(0.215, 0.610, 0.355, 1.000));
 					transition-property: background-color, padding;
 
-					position: absolute; bottom: -1px; left: 0px; right: 0px;
-					background: rgb(230,230,230); background: rgba(255,255,255, .7);
+					position: relative;
+					background: rgb(238, 238, 238);
 					font-size: 13px; line-height: 16px;
 					padding: 8px 12px;
 
-					@media #{$xs-down} {
-						position: relative;
-						background: rgb(238, 238, 238);
+					@media #{$sm-up} {
+						position: absolute; bottom: -1px; left: 0px; right: 0px;
+						background: rgb(230,230,230); background: rgba(255,255,255, .7);
 					}
 				}
 			}
@@ -174,41 +141,6 @@ a{
 	}
 }
 
-.breadcrumbs{
-	ul{
-		@extend .list-unstyled; @extend .list-inline;
-		li{
-			a{
-				font-size: 14px;
-				line-height: 24px;
-				color: rgb(153, 153, 153);
-				text-transform: uppercase;
-			}
-			&.on{
-				a{
-					color:#000;
-				}
-			}
-			&:hover{
-				a{
-					text-decoration: underline;
-				}
-			}
-		}
-		li:after{
-			content: "/";
-			padding-left:10px;
-			color: rgb(153, 153, 153);
-		}
-
-		li:last-child:after{
-			content: "";
-		}
-
-		
-	}
-}
-
 .page-title{
   font-size: 34px;
   line-height: 38px;
@@ -219,19 +151,14 @@ a{
 .nav-secondary {
   margin: 0 0 24px;
   ul{
-  	@extend .list-unstyled;
   	li{
-  		font-size: 14px;
-	  line-height: 18px;
-	  border-bottom: 1px solid #eee;
-	  @extend .regular-font;
-	  a{
+		font-size: 14px;
+	  	line-height: 18px;
+	  	border-bottom: 1px solid #eee;
+	  	a{
 	  		display: block;
   			padding: 10px 0;
 	  	}
-	  &.on{
-	  	@extend .bold-font;
-	  }
   	}
   }
 }
