--- a/public/templates/01/assets/scss/components/_header.scss
+++ b/public/templates/01/assets/scss/components/_header.scss
@@ -5,12 +5,10 @@
 #header {
 	background: #fff;
 	.logo {
-		@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-8;@extend .col-xs-18;@extend .col-hs-18;
 		padding-top: 50px;
-		padding-bottom: 50px;
-		@media #{$xs-down} {
-			padding-top: 50px;
-			padding-bottom: 10px;
+		padding-bottom: 10px;
+		@media #{$sm-up} {
+			padding-bottom: 50px;
 		}
 		img{
 			max-width: 100%;
@@ -18,12 +16,9 @@
 	}
 
 	.right {
-		@extend .col-lg-18;@extend .col-md-18;@extend .col-sm-16;
-		@extend .text-right;
 		padding-top: 24px;
 		padding-bottom: 24px;
 		ul{
-			@extend .list-unstyled; @extend .list-inline;
 			margin:0;
 			padding:0;
 			li{
@@ -50,21 +45,15 @@
 			padding: 2px 0;
 			clear: both;
 			border-top: 1px solid #eee;
-			li{
-				a{
-					@extend .medium-font;
-				}
-			}
 		}
 	}
 
 	.expand-menu{
-		@extend .col-xs-4;@extend .col-hs-4;
 		padding-top: 50px;
-		padding-bottom: 50px;
-		@media #{$xs-down} {
+		padding-bottom: 10px;
+		@media #{$sm-up} {
 			padding-top: 50px;
-			padding-bottom: 10px;
+			padding-bottom: 50px;
 		}
 		margin:0;
 		button{
@@ -74,10 +63,7 @@
 		}
 	}
 	.nav-mobile{
-		@extend .col-xs-24;@extend .col-hs-24;
 		ul{
-			@extend .list-unstyled;
-			@extend .text-center;
 			width:70%;
 			margin:0 auto 0;
 
