--- a/public/templates/01/assets/scss/variables.scss
+++ b/public/templates/01/assets/scss/variables.scss
@@ -34,7 +34,7 @@ $body-bg:               #fff !default;
 $text-color:            $gray-dark !default;
 
 //** Global textual link color.
-$link-color:            $brand-primary !default;
+$link-color:            #000 !default;
 //** Link hover color set via `darken()` function.
 $link-hover-color:      #000 !default;
 //** Link hover decoration.
@@ -54,11 +54,11 @@ $font-size-base:          14px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
 
-$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
-$font-size-h2:            floor(($font-size-base * 1.5)) !default; // ~30px
-$font-size-h3:            ceil(($font-size-base * 1.4)) !default; // ~24px
-$font-size-h4:            ceil(($font-size-base * 1.2)) !default; // ~18px
-$font-size-h5:            $font-size-base !default;
+$font-size-h1:            floor(($font-size-base * 2.28)) !default; // ~32px
+$font-size-h2:            floor(($font-size-base * 1.5)) !default; // ~21px
+$font-size-h3:            ceil(($font-size-base * 1.36)) !default; // ~19px
+$font-size-h4:            ceil(($font-size-base * 1.21)) !default; // ~17px
+$font-size-h5:            ceil(($font-size-base * 1.1)) !default;  // ~15px
 $font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
 
 //** Unit-less `line-height` for use in components like buttons.
