--- a/public/templates/02/assets/scss/pages/_home.scss
+++ b/public/templates/02/assets/scss/pages/_home.scss
@@ -4,24 +4,9 @@
 
 
 .body{
-	.editor{
-		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-	}
-	.body-top{
-		.item{	
-			@extend .col-lg-8;@extend .col-md-8;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
-		}
-	}
-
-	.breadcrumbs{
-		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-	}
-
 	.body-middle{
 		.item-list{
-			.item{	
-				@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-6;@extend .col-xs-12;@extend .col-hs-12;
-				margin-bottom: 25px;
+			.item{  margin-bottom: 25px;
 			}
 		}
 	}
@@ -29,12 +14,10 @@
 	.body-bottom{
 		.item-list{
 			.item{
-				@extend .col-lg-8; @extend .col-md-8;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
 				padding-top: 20px;
 				padding-bottom: 20px;
-				border-left: 2px solid #aaa;
-				@media #{$xs-down} {
-					border-left: none;
+				@media #{$sm-up} {
+					border-left: 2px solid #aaa;
 				}
 				text-align:center;
 				.heading{
@@ -51,10 +34,9 @@
 				}
 			}
 			hr{
-				@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
 				border-top: 2px solid #aaa;
 				box-sizing: border-box;
-			}		
+			}
 		}
 	}
 }
