--- a/public/templates/04/assets/scss/components/_global.scss
+++ b/public/templates/04/assets/scss/components/_global.scss
@@ -70,7 +70,6 @@ a{
 }
 
 .body-list{
-	@extend .clearfix;
 	.item{
 		display:block;
 		@extend .text-center;
@@ -120,16 +119,17 @@ a{
 					@include transition(background-color .15s cubic-bezier(0.215, 0.610, 0.355, 1.000));
 					transition-property: background-color, padding;
 
-					position: absolute; bottom: -1px; left: 0px; right: 0px;
-					background: rgb(230,230,230); background: rgba(255,255,255, .7);
+					position: relative;
+					background: rgb(238, 238, 238);
 					font-size: 13px; line-height: 16px;
 					padding: 8px 12px;
 					p{
 						color: #666;
 					}
-					@media #{$xs-down} {
-						position: relative;
-						background: rgb(238, 238, 238);
+					@media #{$sm-up} {
+
+						position: absolute; bottom: -1px; left: 0px; right: 0px;
+						background: rgb(230,230,230); background: rgba(255,255,255, .7);
 					}
 				}
 			}
@@ -153,7 +153,6 @@ a{
 	}
 
 	.block-heading {
-		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
 		position: relative;
 		padding: 10px 0 12px;
 		margin-bottom: 25px;
