--- a/public/templates/01/assets/scss/components/_global.scss
+++ b/public/templates/01/assets/scss/components/_global.scss
@@ -31,15 +31,9 @@ a{
 }
 
 // ------------------------------------------------------------------------------------------------------
-// FLEXSLIDER DEFAULTS
+// SLICKSLIDER DEFAULTS
 
-.flexslider {
-	border:none;
-	margin:0;
-	.flex-direction-nav {
-		line-height: normal;
-	}
-}
+
 
 //-----------------------------------------------------------------------------------------------------
 //EXTEND
