--- a/public/templates/01/assets/scss/screen.scss
+++ b/public/templates/01/assets/scss/screen.scss
@@ -3,8 +3,7 @@
 // MAIN IMPORTS
 
 @import "utilities/bootstrap";
-@import "bower_components/fontawesome/scss/font-awesome";
-@import "bower_components/bourbon/app/assets/stylesheets/bourbon";
+@import "../../../../../node_modules/bourbon/app/assets/stylesheets/bourbon";
 @import "utilities/mixins";
 @import "utilities/grid";
 @import "utilities/sprites";
