--- a/public/templates/04/assets/scss/pages/_home.scss
+++ b/public/templates/04/assets/scss/pages/_home.scss
@@ -3,13 +3,8 @@
 // HOMEPAGE
 
 #homepage{
+	background-color: #fff;
 	margin-bottom:25px;
-	.container{
-		background: #fff;
-		padding-top: 25px;
-	}
-
-
 	.middle{
 		.item{
 			margin-bottom: 20px;
