--- a/public/templates/01/assets/scss/components/_footer.scss
+++ b/public/templates/01/assets/scss/components/_footer.scss
@@ -1,47 +1,44 @@
-
 // ------------------------------------------------------------------------------------------------------
 // FOOTER
 
 #footer {
-	background-color: #333;
-	color: #fff;
-	padding: 36px 0;
-	margin-top:40px;
-	a {
-		color: #fff;
-	}
-
-	.nav {
-		float:right;
-		overflow: hidden;
-
-		text-align: left;
-		@media #{$sm-up} {
-			text-align: right;
-		}
-		ul{
-			li {
-				display: block;
-				margin:0;
-				border-bottom: 1px solid rgb(68, 68, 68);
-				@media #{$sm-up} {
-					margin: 0 0 0 20px;
-					display: inline-block;
-					border-bottom: none;
-				}
-			}
-
-			a {
-				display: block;
-				padding: 12px 20px  12px 0;
-				@media #{$sm-up} {
-					padding: 0;
-				}
-				&:hover{
-					text-decoration: underline;
-				}
-			}
-		}
-	}
+  background-color: #333;
+  color: #fff;
+  padding: 36px 0;
+  margin-top: 40px;
+  a {
+    color: #fff;
+  }
 }
+
+#footer-nav {
+  text-align: left;
+  @media #{$sm-up} {
+    text-align: right;
+  }
+  ul {
+    li {
+      display: block;
+      margin: 0;
+      border-bottom: 1px solid rgb(68, 68, 68);
+      @media #{$sm-up} {
+        margin: 0 0 0 20px;
+        display: inline-block;
+        border-bottom: none;
+      }
+    }
+
+    a {
+      display: block;
+      padding: 12px 20px 12px 0;
+      @media #{$sm-up} {
+        padding: 0;
+      }
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
 
