--- a/public/templates/01/assets/scss/screen.scss
+++ b/public/templates/01/assets/scss/screen.scss
@@ -4,6 +4,7 @@
 
 @import "utilities/bootstrap";
 @import "../../../../../node_modules/bourbon/app/assets/stylesheets/bourbon";
+@import "../../../../../node_modules/font-awesome/scss/font-awesome";
 @import "utilities/mixins";
 @import "utilities/grid";
 @import "utilities/sprites";
