--- a/public/templates/02/assets/scss/components/_fonts.scss
+++ b/public/templates/02/assets/scss/components/_fonts.scss
@@ -4,13 +4,17 @@
 
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700");
 
+/**
 @font-face {
-  font-family: 'flexslider-icon';
-  src: url('/assets/fonts/flexslider-icon.eot');
-  src: url('/assets/fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/flexslider-icon.woff') format('woff'), url('/assets/fonts/flexslider-icon.ttf') format('truetype'), url('/assets/fonts/flexslider-icon.svg#flexslider-icon') format('svg');
+  font-family: 'slick';
+  src: url('../../../../../../node_modules/slick-carousel/slick/fonts/slick.eot') format('embedded-opentype'),
+  url('../../../../../../node_modules/slick-carousel/slick/fonts/slick.woff') format('woff'),
+  url('../../../../../../node_modules/slick-carousel/slick/fonts/slick.ttf') format('truetype'),
+  url('../../../../../../node_modules/slick-carousel/slick/fonts/slick.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
+*/
 
 // ------------------------------------------------------------------------------------------------------
 // EXTENSIBLE FONT CLASSES
