--- a/public/templates/02/assets/scss/components/_global.scss
+++ b/public/templates/02/assets/scss/components/_global.scss
@@ -1,212 +1,210 @@
-
 // ------------------------------------------------------------------------------------------------------
 // GLOBAL STYLES
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-a{ 
-	text-decoration:none;
-	img{
-		border:none;
-	}
-	&:hover{
-		text-decoration: none;
-	}
+a {
+  text-decoration: none;
+  img {
+    border: none;
+  }
+  &:hover {
+    text-decoration: none;
+  }
 }
 
-*{
-	line-height:24px;
+* {
+  line-height: 24px;
 }
 
-.no-pad{
-	margin-left: -$grid-gutter-width !important;
-    margin-right: -$grid-gutter-width !important;
-}
-
-.pad-top{
-	padding-top:$grid-gutter-width;
-}
-
-.pad-bot{
-	padding-bottom:$grid-gutter-width;
-}
 // ------------------------------------------------------------------------------------------------------
-// FLEXSLIDER DEFAULTS
+// SLICKSLIDER DEFAULTS
 
-.flexslider {
-	border:none;
-	margin:0;
-	.flex-direction-nav {
-		line-height: normal;
-	}
+.slick-dots {
+  li  {
+    list-style-type: none;
+    display: inline-block;
+  }
 }
 
 //-----------------------------------------------------------------------------------------------------
 //EXTEND
 
-.btn{
-	display: inline-block;
-	padding: 12px 20px;
-	background: #eee;
-	border: none;
-	border-radius: 6px;
+.btn {
+  display: inline-block;
+  padding: 12px 20px;
+  background: #eee;
+  border: none;
+  border-radius: 6px;
 
-	&:hover {
-		background: #ddd;
-	}
+  &:hover {
+    background: #ddd;
+  }
 
-	// Small caps
+  // Small caps
 
-	&.sc {
-		text-transform: uppercase;
-		font-size: 85%; letter-spacing: 0.1em;
-		@extend .bold-font;
-	}
+  &.sc {
+    text-transform: uppercase;
+    font-size: 85%;
+    letter-spacing: 0.1em;
+    @extend .bold-font;
+  }
 
-	// Button colour combinations
-	
-	&.inverse {
-		background: #222;
-		color: #fff;
+  // Button colour combinations
 
-		&:hover {
-			background: #111;
-		}
-	}
+  &.inverse {
+    background: #222;
+    color: #fff;
+
+    &:hover {
+      background: #111;
+    }
+  }
 }
 
 //--------------
 //Item list
 
 .block-heading {
-	div{
-		position: relative;
-		background: #333;
-		color: #fff;
-		padding-top: 10px;
-		padding-bottom: 12px;
-		margin-bottom: 25px;
-		.heading {
-			font-size: 20px; line-height: 24px;
-			margin: 0;
-			padding: 0 80px;
-			text-align: center;
-		}
+  div {
+    position: relative;
+    background: #333;
+    color: #fff;
+    padding-top: 10px;
+    padding-bottom: 12px;
+    margin-bottom: 25px;
+    .heading {
+      font-size: 20px;
+      line-height: 24px;
+      margin: 0;
+      padding: 0 80px;
+      text-align: center;
+    }
 
-		a{
-			position: absolute; top: 12px; right: 14px;
-			font-size: 15px; line-height: 24px;
-			color: #fff;
-			&:hover {
-				text-decoration: underline;
-			}
-		}
-	}
+    a {
+      position: absolute;
+      top: 12px;
+      right: 14px;
+      font-size: 15px;
+      line-height: 24px;
+      color: #fff;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
 
-.item-list{
-	.item{
-		figure{
-			position:relative;
-			img {
-				margin: 0;
-				max-width: 100%;
-			}
+.item-list {
+  .item {
+    figure {
+      position: relative;
+      img {
+        margin: 0;
+        width: 100%;
+      }
 
-			figcaption {
-				font-size: 13px; line-height: 16px;
-				padding: 8px 0;
-			}
-		}
-		&:hover {
-			img {
-				opacity: .8;
-			}
-		}
-	}
-	p{
-		margin-bottom: 30px;
-	}
-	/* Overlay the figcaptions onto the image */
-	&.overlay {
-		> .item {
-			margin-bottom: 24px;
-			figure{
-				position:relative;
-				img {
-					margin: 0;
-				}
+      figcaption {
+        font-size: 13px;
+        line-height: 16px;
+        padding: 8px 0;
+      }
+    }
+    &:hover {
+      img {
+        opacity: .8;
+      }
+    }
+  }
+  p {
+    margin-bottom: 30px;
+  }
+  /* Overlay the figcaptions onto the image */
+  &.overlay {
+    > .item {
+      margin-bottom: 24px;
+      figure {
+        position: relative;
+        img {
+          margin: 0;
+        }
 
-				figcaption {
+        figcaption {
 
-					@include transition(background-color .15s cubic-bezier(0.215, 0.610, 0.355, 1.000));
-					transition-property: background-color, padding;
+          @include transition(background-color .15s cubic-bezier(0.215, 0.610, 0.355, 1.000));
+          transition-property: background-color, padding;
 
-					position: absolute; bottom: -1px; left: 0px; right: 0px;
-					background: rgb(230,230,230); background: rgba(255,255,255, .7);
-					font-size: 13px; line-height: 16px;
-					padding: 8px 12px;
+          position: absolute;
+          bottom: -1px;
+          left: 0px;
+          right: 0px;
+          background: rgb(230, 230, 230);
+          background: rgba(255, 255, 255, .7);
+          font-size: 13px;
+          line-height: 16px;
+          padding: 8px 12px;
 
-					@media #{$xs-down} {
-						position: relative;
-						background: rgb(238, 238, 238);
-					}
-				}
-			}
+          @media #{$xs-down} {
+            position: relative;
+            background: rgb(238, 238, 238);
+          }
+        }
+      }
 
-			&:hover {
-				@media #{$md-up} {
-					figcaption {
-						background: rgb(245,245,245); background: rgba(255,255,255, .9);
-						padding-top: 14px; padding-bottom: 14px;
-						
-					}
-				}
-			}
+      &:hover {
+        @media #{$md-up} {
+          figcaption {
+            background: rgb(245, 245, 245);
+            background: rgba(255, 255, 255, .9);
+            padding-top: 14px;
+            padding-bottom: 14px;
 
-		}
-	}
+          }
+        }
+      }
+
+    }
+  }
 }
 
-.breadcrumbs{
-	margin-bottom: 25px;
-	ul{
-		li{
-			a{
-				font-size: 14px;
-				line-height: 24px;
-				color: rgb(153, 153, 153);
-				text-transform: uppercase;
-			}
-			&.on{
-				a{
-					color:#000;
-				}
-			}
-			&:hover{
-				a{
-					text-decoration: underline;
-				}
-			}
-		}
-		li:after{
-			content: "/";
-			padding-left:10px;
-			color: rgb(153, 153, 153);
-		}
+.breadcrumbs {
+  margin-bottom: 25px;
+  ul {
+    li {
+      a {
+        font-size: 14px;
+        line-height: 24px;
+        color: rgb(153, 153, 153);
+        text-transform: uppercase;
+      }
+      &.on {
+        a {
+          color: #000;
+        }
+      }
+      &:hover {
+        a {
+          text-decoration: underline;
+        }
+      }
+    }
+    li:after {
+      content: "/";
+      padding-left: 10px;
+      color: rgb(153, 153, 153);
+    }
 
-		li:last-child:after{
-			content: "";
-		}
+    li:last-child:after {
+      content: "";
+    }
 
-		
-	}
+  }
 }
 
-.page-title{
+.page-title {
   font-size: 34px;
   line-height: 38px;
   margin: 0 0 20px;
@@ -215,55 +213,55 @@ a{
 
 .nav-secondary {
   margin: 0 0 24px;
-  ul{
-  	li{
-  		font-size: 14px;
-	  line-height: 18px;
-	  border-bottom: 1px solid #eee;
-	  a{
-	  		display: block;
-  			padding: 10px 0;
-	  }
-  	}
+  ul {
+    li {
+      font-size: 14px;
+      line-height: 18px;
+      border-bottom: 1px solid #eee;
+      a {
+        display: block;
+        padding: 10px 0;
+      }
+    }
   }
 }
 
-.responsive-table{
-	@media #{$hs} {
-		  max-width: 100%; // adjust to your needs
-		  tr {
-		    border-top: 1px solid #ddd;
-		    border-bottom: 1px solid #ddd;
-		  }  
-		  th {
-		    display: none; // for accessibility, use a visually hidden method here instead! Thanks, reddit!   
-		  }
-		  
-		  td {
-		    display: block; 
-		    border:none !important;
-		    
-		    &:first-child {
-		      padding-top: .5em;
-		    }
-		    &:last-child {
-		      padding-bottom: .5em;
-		    }
+.responsive-table {
+  @media #{$hs} {
+    max-width: 100%; // adjust to your needs
+    tr {
+      border-top: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
+    }
+    th {
+      display: none; // for accessibility, use a visually hidden method here instead! Thanks, reddit!
+    }
 
-		    &:before {
-		      content: attr(data-th)": "; // who knew you could do this? The internet, that's who.
-		      font-weight: bold;
+    td {
+      display: block;
+      border: none !important;
 
-		      // optional stuff to make it look nicer
-		      width: 6.5em; // magic number :( adjust according to your own content
-		      display: inline-block;
-		    }
-		  }
-		  
-		  th, td {
-		    text-align: left;
+      &:first-child {
+        padding-top: .5em;
+      }
+      &:last-child {
+        padding-bottom: .5em;
+      }
 
-		  }	  	  
-	}
+      &:before {
+        content: attr(data-th) ": "; // who knew you could do this? The internet, that's who.
+        font-weight: bold;
+
+        // optional stuff to make it look nicer
+        width: 6.5em; // magic number :( adjust according to your own content
+        display: inline-block;
+      }
+    }
+
+    th, td {
+      text-align: left;
+
+    }
+  }
 }
 
