--- a/public/templates/02/assets/scss/screen.scss
+++ b/public/templates/02/assets/scss/screen.scss
@@ -3,8 +3,8 @@
 // MAIN IMPORTS
 
 @import "utilities/bootstrap";
-@import "bower_components/fontawesome/scss/font-awesome";
-@import "bower_components/bourbon/app/assets/stylesheets/bourbon";
+@import "../../../../../node_modules/bourbon/app/assets/stylesheets/bourbon";
+@import "../../../../../node_modules/font-awesome/scss/font-awesome";
 @import "utilities/mixins";
 @import "utilities/grid";
 @import "utilities/sprites";
@@ -16,7 +16,6 @@
 @import "components/footer";
 @import "utilities/pages";
 @import "components/editor";
-@import "components/banners";
 
 // ------------------------------------------------------------------------------------------------------
 // TEST COLUMN LAYOUT
