--- a/public/templates/04/assets/scss/components/_global.scss
+++ b/public/templates/04/assets/scss/components/_global.scss
@@ -142,6 +142,7 @@ a {
     position: relative;
     padding: 10px 0 12px;
     margin-bottom: 25px;
+    text-align: center;
     .heading {
       @extend .heading-font-2 !optional;
       font-size: 20px;
